--- a/YanisMat/stylesheets/sidebar.css
+++ b/YanisMat/stylesheets/sidebar.css
@@ -1,4 +1,4 @@
-.sitebar {
+.sidebar {
 position: fixed;
 top: 40px;
 left: 20px;
@@ -8,40 +8,40 @@ transition: all .1s ease-out;
 z-index: 1;
 }
 
-.sitebar:hover {
+.sidebar:hover {
 opacity: 1;
 }
 
-.sitebar > ul{
+.sidebar > ul{
 position: absolute;
 padding: 15px 30px;
 
 }
 
-.sitebar li {
+.sidebar li {
 margin: 12px 0;
 font-size: 14px;
 line-height: 15px;
 color: rgba(0, 0, 0, 0.8);
 }
 
-.sitebar li:hover {
+.sidebar li:hover {
 opacity: 1;
 }
 
-.sitebar > ul > li:first-child {
+.sidebar > ul > li:first-child {
 margin-top: 10px;
 font-weight: bold;
 }
 
-.sitebar > ul > li > ul {
+.sidebar > ul > li > ul {
 padding-left: 10px;
 }
 
-.sitebar > ul > li > ul li {
+.sidebar > ul > li > ul li {
 color: rgba(0, 0, 0, 0.4);
 }
 
-.sitebar > ul > li > ul li:hover {
+.sidebar > ul > li > ul li:hover {
 color: rgba(0, 0, 0, 0.6);
 }
