--- a/YanisMat/StyleSheets/content.css
+++ b/YanisMat/StyleSheets/content.css
@@ -96,18 +96,20 @@ article ul {
 
 }
 
-article li{
+article li {
   margin: 17px 0 17px 30px;
 }
 
 
-article > img{
+article > img,
+article > iframe {
   display: block;
   width: 1020px;
   margin: 80px auto;
-  }
+}
 
-article img + h2 {
+article img + h2,
+article iframe + h2 {
   margin-top: 82px;
 }
 
@@ -115,14 +117,23 @@ article img + h2 {
 
 article img + p,
 article img + blockquote,
-article img + ul{
+article img + ul,
+article img + iframe,
+article img + iframe,
+article img + iframe {
   margin-top: -3px;
 }
 
-article h2 + img {
+article h2 + img,
+article h2 + iframe {
   margin-top: 82px;
 }
 
-article h3 + img {
+article h3 + img,
+article h3 + iframe {
   margin-top: 81px;
+}
+
+article > iframe {
+  height: 574px;
 }
