--- a/YanisMat/StyleSheets/layout.css
+++ b/YanisMat/StyleSheets/layout.css
@@ -1,7 +1,9 @@
-*{
+* {
   box-sizing: border-box;
 }
-body{
+
+body {
+  min-width: 768px;
  font-family: 'PT sans',sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
