--- a/YanisMat/StyleSheets/menubar.css
+++ b/YanisMat/StyleSheets/menubar.css
@@ -11,3 +11,14 @@
   height: 16px;
 background-image: url(../images/wikimedium_logo.svg)
 }
+
+.about {
+  line-height: 50px;
+  font-size: 14px;
+  color: rgba(0, 0, 0, .2);
+  transition: all .1s ease-out;
+}
+
+.about {
+  color: rgba(0, 0, 0, .8);
+}
