--- a/YanisMat/StyleSheets/menubar.css
+++ b/YanisMat/StyleSheets/menubar.css
@@ -9,7 +9,7 @@
   display: block;
   width: 180px;
   height: 16px;
-background-image: url(../images/wikimedium_logo.svg)
+background-image: url(../images/wikimedium_logo.svg);
 }
 
 .about {
