--- a/YanisMat/stylesheets/landing.css
+++ b/YanisMat/stylesheets/landing.css
@@ -1,12 +1,22 @@
+.landingWrapper {
+  width: 1440px;
+  min-width: 1280px;
+  margin: 0 auto;
+  box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
+}
+
 .mainSection {
   height: 800px;
+  position: relative;
+  overflow: hidden;
   }
-
 
 .mainSection section {
   position: absolute;
-  margin: 150px 0 0 160px;
+  width: 577px;
+  top: 147px;
 }
+
 .mainSection h2 {
   font-family: 'PT sans Caption', sans-serif;
   font-size: 36px;
@@ -19,9 +29,81 @@
   line-height: 38px;
 }
 
+.mainSection.center {
+text-align: center;
+}
+
+.mainSection.center h2 {
+  font-size: 40px;
+  line-height: 52px;
+}
+
+.mainSection.center p {
+  margin-top: 27px;
+}
+
+.mainSection.center section {
+  width: 100%;
+}
+
+.mainSection section {
+  position: absolute;
+  top: 147px;
+  width: 580px;
+}
+
+.mainSection.left section {
+  left: 160px;
+}
+
+
+.mainSection.right section {
+  left: 160px;
+}
+
+
 .mainSection section figure {
   width: 210px;
   height: 20px;
   margin-top: 100px;
-  background: green;
+  background-image: url(../images/pattern.svg);
+}
+
+.mainSection.left section figure {
+  margin-left: -60px;
+}
+
+.mainSection.right section figure {
+  margin-left: 430px;
+
+}
+
+.mockup {
+  background-size: cover;
+  position: absolute;
+}
+
+#mockup1 {
+  top: 115px;
+  right: -85px;
+  width: 701px;
+  height: 660px;
+  background-image: url(../images/landing/landing-mockup-1.jpg);
+}
+
+#mockup2 {
+  top: 97px;
+  left: 100px;
+  width: 532px;
+  height: 670px;
+  background-image: url(../images/landing/landing-mockup-2.jpg);
+}
+
+
+#mockup3 {
+
+}
+
+@media screen and (max-width:1440px) {
+  .landingWrapper
 }
