--- a/YanisMat/StyleSheets/layout.css
+++ b/YanisMat/StyleSheets/layout.css
@@ -8,6 +8,7 @@ a {
 }
 
 body {
+  /*width: 100%;*/
   min-width: 768px;
  font-family: 'PT sans',sans-serif;
  -webkit-font-smoothing: antialiased;
