--- a/YanisMat/stylesheets/landing.css
+++ b/YanisMat/stylesheets/landing.css
@@ -1,28 +1,38 @@
+body.landin.bg {
+  background-image: url(../images/index_mockup_ipad.png);
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+
+body.landing *{
+  transition: all .3s ease;
+}
+
 .landingWrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+
   width: 1440px;
-  min-width: 1280px;
   margin: 0 auto;
   box-shadow: 0 0 10px 0 rgba(0,0,0,.1);
 }
 
 .mainSection {
-  height: 800px;
   position: relative;
+  width: 1440px;
+  height: 800px;
   overflow: hidden;
-  }
-
-.mainSection section {
-  position: absolute;
-  width: 577px;
-  top: 147px;
 }
 
 .mainSection h2 {
-  font-family: 'PT sans Caption', sans-serif;
+  font-family: 'PT Sans Caption', sans-serif;
   font-size: 36px;
   line-height: 46px;
-
 }
+
 .mainSection p {
   margin-top: 21px;
   font-size: 26px;
@@ -30,7 +40,7 @@
 }
 
 .mainSection.center {
-text-align: center;
+  text-align: center;
 }
 
 .mainSection.center h2 {
@@ -56,17 +66,15 @@ text-align: center;
   left: 160px;
 }
 
-
 .mainSection.right section {
-  left: 160px;
+  right: 160px;
 }
-
 
 .mainSection section figure {
   width: 210px;
   height: 20px;
   margin-top: 100px;
-  background-image: url(../images/pattern.svg);
+  background-image: url(../images/landing/pattern.svg);
 }
 
 .mainSection.left section figure {
@@ -75,18 +83,17 @@ text-align: center;
 
 .mainSection.right section figure {
   margin-left: 430px;
-
 }
 
 .mockup {
-  background-size: cover;
   position: absolute;
+  background-size: cover;
 }
 
 #mockup1 {
   top: 115px;
-  right: -85px;
-  width: 701px;
+  right: -116px;
+  width: 732px;
   height: 660px;
   background-image: url(../images/landing/landing-mockup-1.jpg);
 }
@@ -99,11 +106,85 @@ text-align: center;
   background-image: url(../images/landing/landing-mockup-2.jpg);
 }
 
-
 #mockup3 {
 
 }
 
-@media screen and (max-width:1440px) {
-  .landingWrapper
+@media screen and (max-width: 1460px) {
+  body.landing.bg {
+    background-image: url(../images/index_mockup_ipad.png);
+
+  }
+}
+
+@media screen and (max-width: 1460px) {
+  .landingWrapper {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1180px) {
+  .landingWrapper {
+    width: 100%;
+  }
+
+  .mainSection {
+    width: 1180px;
+    height: 568px;
+  }
+
+  .mainSection h2 {
+    font-size: 26px;
+    line-height: 32px;
+  }
+
+  .mainSection p {
+    margin-top: 18px;
+    font-size: 18px;
+    line-height: 27px;
+  }
+
+  .mainSection section {
+    top: 105px;
+    width: 410px;
+  }
+
+  .mainSection.left section {
+    left: 190px;
+  }
+
+  .mainSection.right section {
+    right: 190px;
+  }
+
+  .mainSection section figure {
+    width: 147px;
+    height: 14px;
+    margin-top: 100px;
+  }
+
+  .mainSection.left section figure {
+    margin-left: -40px;
+  }
+
+  .mainSection.right section figure {
+    margin-left: 410px;
+  }
+
+  #mockup1 {
+    top: 85px;
+    right: 0px;
+    width: 521px;
+    height: 470px;
+
+  }
+
+  #mockup2 {
+    top: 97px;
+    left: 100px;
+    width: 380px;
+    height: 478px;
+
+  }
+
 }
