--- a/YanisMat/stylesheets/landing.css
+++ b/YanisMat/stylesheets/landing.css
@@ -1,10 +1,10 @@
-body.landin.bg {
-  background-image: url(../images/index_mockup_ipad.png);
+body.landing.bg{
+  background-image: url(../images/index_mockup.png);
   background-repeat: no-repeat;
   background-position: top center;
 }
 
-body.landing *{
+body.landing * {
   transition: all .3s ease;
 }
 
@@ -21,8 +21,8 @@ body.landing *{
 }
 
 .mainSection {
-  position: relative;
   width: 1440px;
+  position: relative;
   height: 800px;
   overflow: hidden;
 }
@@ -53,6 +53,7 @@ body.landing *{
 }
 
 .mainSection.center section {
+  top: 182px;
   width: 100%;
 }
 
@@ -71,9 +72,9 @@ body.landing *{
 }
 
 .mainSection section figure {
+  margin: 100px 0 0 -60px;
   width: 210px;
   height: 20px;
-  margin-top: 100px;
   background-image: url(../images/landing/pattern.svg);
 }
 
@@ -85,39 +86,66 @@ body.landing *{
   margin-left: 430px;
 }
 
+.mainSection.center section nav {
+  margin-top: 100px;
+  font-size: 0px;
+}
+
+.mainSection.center section nav a {
+  margin: 0 10px;
+}
+
+.mainSection.center footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+}
+
+
+.mainSection.center footer p {
+  font-size: 16px;
+}
+
+
 .mockup {
   position: absolute;
   background-size: cover;
 }
 
 #mockup1 {
-  top: 115px;
-  right: -116px;
   width: 732px;
   height: 660px;
+  top: 115px;
+  right: -116px;
   background-image: url(../images/landing/landing-mockup-1.jpg);
 }
 
 #mockup2 {
-  top: 97px;
-  left: 100px;
   width: 532px;
   height: 670px;
+  top: 96px;
+  left:100px;
   background-image: url(../images/landing/landing-mockup-2.jpg);
 }
 
 #mockup3 {
+  width: 1348px;
+  height: 779px;
+  top: 97px;
+  right: -732px;
+  background-image: url(../images/landing/landing-mockup-3.jpg);
+  border-radius: 5px;
+  box-shadow: 0 2 10px 0 rgba(0,0,0,.2);
 
 }
 
 @media screen and (max-width: 1460px) {
+
   body.landing.bg {
     background-image: url(../images/index_mockup_ipad.png);
-
   }
-}
 
-@media screen and (max-width: 1460px) {
   .landingWrapper {
     width: 100%;
   }
@@ -139,9 +167,18 @@ body.landing *{
   }
 
   .mainSection p {
-    margin-top: 18px;
     font-size: 18px;
     line-height: 27px;
+    margin-top: 18px;
+  }
+
+  .mainSection.center h2 {
+    font-size: 28px;
+    line-height: 37px;
+  }
+
+  .mainSection.center p {
+    margin-top: 21px;
   }
 
   .mainSection section {
@@ -157,10 +194,14 @@ body.landing *{
     right: 190px;
   }
 
+  .mainSection.center section {
+    top: 132px;
+  }
+
   .mainSection section figure {
+    margin-top: 100px;
     width: 147px;
     height: 14px;
-    margin-top: 100px;
   }
 
   .mainSection.left section figure {
@@ -168,22 +209,41 @@ body.landing *{
   }
 
   .mainSection.right section figure {
-    margin-left: 410px;
+    margin-left: 303px;
   }
 
+  .mainSection.center section nav {
+    margin-top: 50px;
+  }
+
+  .mainSection.center section nav a {
+    margin: 0 6px;
+  }
+
+  .mainSection.center footer p {
+    font-size: 12px;
+  }
+
+
   #mockup1 {
-    top: 85px;
-    right: 0px;
     width: 521px;
     height: 470px;
-
+    right: 0px;
   }
 
   #mockup2 {
-    top: 97px;
-    left: 100px;
     width: 380px;
     height: 478px;
+    top: 70px;
+    left:148px;
+  }
+
+  #mockup3 {
+    width: 960px;
+    height: 555px;
+    top: 97px;
+    right: -732px;
+
 
   }
 
